# DATA-SCIENCE

WEB APP/: Docker-compose.yml  Dockerfile_backend  Dockerfile_frontend  KONG docker-compose.yml  app.py  pgstat.stat  producer.py  pyproject.toml
WEB APP/dummy/: consumer.py  main.py
