[tool.poetry]
name = "pakistan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
streamlit = "^1.35.0"
uvicorn = "^0.29.0"
passlib = "^1.7.4"
databases = "^0.9.0"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
psycopg = "^3.1.19"
sqlalchemy = "^2.0.30"
bcrypt = "^4.1.3"
aiokafka = "^0.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
